Apply more changes in about view and add mixins

--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "~0.2.2",
     "lite-server": "2.3.0",
+    "node-sass": "^4.7.2",
     "protractor": "~5.1.2",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^6.0.6",
     "source-map-explorer": "~1.5.0",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
