--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@uirouter/angular": "^1.0.0-rc.2",
     "core-js": "^2.4.1",
     "material-design-icons": "^3.0.1",
+    "roboto-fontface": "^0.8.0",
     "rxjs": "^5.5.2",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.17"
