--- a/package.json
+++ b/package.json
@@ -61,6 +61,11 @@
     "npm": ">=5.0.0"
   },
   "scripts": {
-    "postinstall": "webdriver-manager update"
+    "postinstall": "webdriver-manager update",
+    "build": "webpack",
+    "start": "webpack-dev-server --port=4200",
+    "test": "karma start ./karma.conf.js",
+    "pree2e": "webdriver-manager update --standalone false --gecko false --quiet",
+    "e2e": "protractor ./protractor.conf.js"
   }
 }
