--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,22 +3,28 @@
     "annotationsAs": "static fields",
     "annotateForClosureCompiler": true
   },
+
   "compileOnSave": false,
+
   "compilerOptions": {
-    "outDir": "./.tmp/out-tsc",
-    "sourceMap": true,
+    "outDir": ".tmp/out-tsc",
+
+    "target": "es6",
     "module": "es2015",
     "moduleResolution": "node",
-    "noImplicitAny": true,
+
+    "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es6",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
+    "noImplicitAny": true,
+
     "lib": [
       "es2017",
       "dom"
+    ],
+
+    "typeRoots": [
+      "./node_modules/@types"
     ]
   }
 }
