--- a/package.json
+++ b/package.json
@@ -7,54 +7,60 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "@angular/animations": "^5.0.0",
-    "@angular/cdk": "^5.0.0",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
+    "@angular/animations": "^5.1.3",
+    "@angular/cdk": "^5.0.3",
+    "@angular/common": "^5.1.3",
+    "@angular/compiler": "^5.1.3",
+    "@angular/core": "^5.1.3",
     "@angular/flex-layout": "^2.0.0-beta.12",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/material": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
+    "@angular/forms": "^5.1.3",
+    "@angular/http": "^5.1.3",
+    "@angular/material": "^5.0.3",
+    "@angular/platform-browser": "^5.1.3",
+    "@angular/platform-browser-dynamic": "^5.1.3",
+    "@angular/router": "^5.1.3",
     "@uirouter/angular": "^1.0.0-rc.2",
-    "core-js": "^2.4.1",
+    "core-js": "^2.5.3",
     "material-design-icons": "^3.0.1",
     "roboto-fontface": "^0.8.0",
-    "rxjs": "^5.5.2",
+    "rxjs": "^5.5.6",
     "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.17"
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "1.6.3",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "clang-format": "~1.0.55",
-    "codelyzer": "~4.0.1",
-    "concurrently": "~3.4.0",
-    "google-closure-compiler": "~20171023.0.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
+    "@angular/compiler-cli": "^5.1.3",
+    "@angular/language-service": "^5.1.3",
+    "@types/jasmine": "~2.8.3",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.5.7",
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "clang-format": "~1.2.2",
+    "codelyzer": "~4.0.2",
+    "concurrently": "~3.5.1",
+    "google-closure-compiler": "~20171203.0.0",
+    "gulp": "^3.9.1",
+    "gulp-util": "^3.0.8",
+    "jasmine-core": "~2.8.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~2.0.0",
+    "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "~1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "karma-coverage-istanbul-reporter": "~1.3.3",
+    "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "~0.2.2",
     "lite-server": "2.3.0",
     "node-sass": "^4.7.2",
-    "protractor": "~5.1.2",
+    "npm-check-updates": "^2.14.0",
+    "protractor": "~5.2.2",
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.6",
     "source-map-explorer": "~1.5.0",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "through2": "^2.0.3",
+    "ts-node": "~4.1.0",
+    "tslint": "~5.8.0",
+    "typescript": "~2.6.2"
   },
   "engines": {
     "node": ">=8.0.0",
