--- a/package.json
+++ b/package.json
@@ -31,17 +31,18 @@
     "@angular/cli": "1.6.3",
     "@angular/compiler-cli": "^5.1.3",
     "@angular/language-service": "^5.1.3",
-    "@types/jasmine": "~2.8.3",
+    "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.5.7",
-    "babel-core": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-register": "^6.26.0",
     "clang-format": "~1.2.2",
     "codelyzer": "~4.0.2",
     "concurrently": "~3.5.1",
-    "google-closure-compiler": "~20171203.0.0",
+    "del": "^3.0.0",
+    "google-closure-compiler": "~20171023.0.1",
     "gulp": "^3.9.1",
-    "gulp-util": "^3.0.8",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
@@ -51,11 +52,14 @@
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "~0.2.2",
     "lite-server": "2.3.0",
+    "lodash": "^4.17.4",
     "node-sass": "^4.7.2",
     "npm-check-updates": "^2.14.0",
     "protractor": "~5.2.2",
+    "q": "latest",
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.6",
+    "semver": "^5.4.1",
     "source-map-explorer": "~1.5.0",
     "through2": "^2.0.3",
     "ts-node": "~4.1.0",
@@ -68,10 +72,11 @@
   },
   "scripts": {
     "postinstall": "webdriver-manager update",
-    "build": "webpack",
-    "start": "webpack-dev-server --port=4200",
-    "test": "karma start ./karma.conf.js",
-    "pree2e": "webdriver-manager update --standalone false --gecko false --quiet",
+    "build": "ng build --aot --prod",
+    "start": "concurrently \"npm run serve:backend\" \"npm run serve:frontend\"",
+    "serve:backend": "gulp serve --kubeconfig $HOME/.kube/config",
+    "serve:frontend": "ng serve --aot --proxy-config build/proxy.conf.json",
+    "test": "ng test",
     "e2e": "protractor ./protractor.conf.js"
   }
 }
