Adjust package.json scripts

--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
   },
   "license": "Apache-2.0",
   "scripts": {
+    "start": "concurrently \"npm run start-backend\" \"npm run start-frontend\"",
+    "start-frontend": "ng serve --aot --proxy-config build/proxy.conf.json",
+    "start-backend": "gulp serve --kubeconfig $HOME/.kube/config",
+    "format": "concurrently \"npm run format-frontend\" \"npm run format-backend\"",
+    "format-frontend": "clang-format -i src/app/frontend/**/*.ts build/**/*.js",
+    "format-backend": "gulp format",
+    "lint": "npm run lint-frontend && npm run lint-backend",
+    "lint-frontend": "tslint -c tslint.json --project . -t codeFrame",
+    "lint-backend": "gulp lint",
     "postinstall": "webdriver-manager update",
     "build": "ng build --aot --prod",
-    "start": "concurrently \"npm run serve:backend\" \"npm run serve:frontend\"",
-    "serve:backend": "gulp serve --kubeconfig $HOME/.kube/config",
-    "serve:frontend": "ng serve --aot --proxy-config build/proxy.conf.json",
-    "format": "npm run format-ts && npm run format-build && gulp format",
-    "format-ts": "clang-format -i src/app/frontend/**/*.ts",
-    "format-build": "clang-format -i build/**/*.js",
-    "lint": "npm run lint-javascript && gulp lint",
-    "lint-javascript": "tslint -c tslint.json --project . -t codeFrame",
     "test": "ng test",
     "e2e": "protractor ./protractor.conf.js"
   },
@@ -42,26 +43,28 @@
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.3",
+    "@angular/cli": "^1.6.3",
     "@angular/compiler-cli": "^5.1.3",
     "@angular/language-service": "^5.1.3",
-    "@types/jasmine": "~2.5.53",
+    "@types/jasmine": "^2.8.3",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.5.7",
+    "@types/node": "^8.5.8",
     "babel": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
-    "clang-format": "1.1.0",
+    "clang-format": "^1.2.2",
     "codelyzer": "~4.0.2",
     "concurrently": "~3.5.1",
     "del": "^3.0.0",
-    "google-closure-compiler": "~20171023.0.1",
+    "google-closure-compiler": "^20180101.0.0",
     "gulp": "^3.9.1",
-    "gulp-codecov.io": "^1.0.1-p1",
+    "gulp-clang-format": "^1.0.25",
+    "gulp-codecov.io": "^1.0.1",
     "gulp-filter": "^5.1.0",
     "gulp-header-license": "^1.0.9",
     "gulp-license-check": "^1.2.1",
     "gulp-sass-lint": "^1.3.4",
+    "gulp-tslint": "^8.1.2",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "js-beautify": "^1.7.5",
