Update SASS lint

--- a/package.json
+++ b/package.json
@@ -10,23 +10,30 @@
     "start": "concurrently \"npm run start-backend\" \"npm run start-frontend\"",
     "start-frontend": "ng serve --aot --proxy-config build/proxy.conf.json",
     "start-backend": "gulp serve --kubeconfig $HOME/.kube/config",
+    "build": "",
+    "build-frontend": "",
+    "build-backend": "",
     "format": "concurrently \"npm run format-frontend\" \"npm run format-backend\"",
     "format-frontend": "clang-format -i src/app/frontend/**/*.ts build/**/*.js && gulp format-html",
     "format-backend": "goimports -w src/app/backend",
+    "check": "npm run lint && npm run test",
     "lint": "npm run lint-frontend && npm run lint-backend",
-    "lint-frontend": "tslint -c tslint.json --project . -t codeFrame",
-    "lint-backend": "gulp lint",
+    "lint-frontend": "npm run lint-ts && npm run lint-sass",
+    "lint-ts": "tslint -c tslint.json --project . -t codeFrame",
+    "lint-sass": "./node_modules/sass-lint/bin/sass-lint.js -c ./build/.sass-lint.yml 'src/app/frontend/**/*.scss' -v -q",
+    "lint-backend": "golint github.com/kubernetes/dashboard/src/app/backend/...",
     "test": "npm run test-frontend && npm run test-backend",
     "test-frontend": "ng test",
     "test-backend": "go test github.com/kubernetes/dashboard/src/app/backend/...",
     "coverage": "concurrently \"npm run coverage-backend\" \"npm run coverage-frontend\"",
     "coverage-frontend": "",
     "coverage-backend": "./build/coverage-backend.sh coverage/go.txt",
+    "e2e": "protractor ./build/protractor.conf.js",
     "ci-cluster": "./build/ci-cluster.sh",
-
-    "postinstall": "webdriver-manager update && go get golang.org/x/tools/cmd/goimports",
-    "build": "ng build --aot --prod",
-    "e2e": "protractor ./build/protractor.conf.js"
+    "postinstall": "webdriver-manager update && npm run get-go-tools",
+    "get-go-tools": "npm run get-goimports && npm run get-golint",
+    "get-goimports": "go get -u golang.org/x/tools/cmd/goimports",
+    "get-golint": "go get -u github.com/golang/lint/golint"
   },
   "dependencies": {
     "@angular/animations": "^5.1.3",
@@ -69,7 +76,6 @@
     "gulp-filter": "^5.1.0",
     "gulp-header-license": "^1.0.9",
     "gulp-license-check": "^1.2.1",
-    "gulp-sass-lint": "^1.3.4",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "js-beautify": "^1.7.5",
@@ -86,6 +92,7 @@
     "protractor": "~5.2.2",
     "q": "latest",
     "raw-loader": "^0.5.1",
+    "sass-lint": "^1.12.1",
     "sass-loader": "^6.0.6",
     "semver": "^5.4.1",
     "source-map-explorer": "~1.5.0",
