--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "lint-sass": "./node_modules/sass-lint/bin/sass-lint.js -c ./build/.sass-lint.yml 'src/app/frontend/**/*.scss' -v -q",
     "lint-backend": "golint github.com/kubernetes/dashboard/src/app/backend/...",
     "test": "npm run test-frontend && npm run test-backend",
-    "test-frontend": "ng test",
+    "test-frontend": "ng test --browser ChromeHeadless --single-run",
+    "test-frontend:watch": "ng test --browser ChromeHeadless",
     "test-backend": "go test github.com/kubernetes/dashboard/src/app/backend/...",
     "coverage": "concurrently \"npm run coverage-backend\" \"npm run coverage-frontend\"",
     "coverage-frontend": "",
     "coverage-backend": "./build/coverage-backend.sh coverage/go.txt",
     "e2e": "protractor ./build/protractor.conf.js",
     "ci-cluster": "./build/ci-cluster.sh",
+    "clean": "rm -rf .go_workspace .tmp coverage dist",
     "postinstall": "webdriver-manager update && npm run get-go-tools",
     "get-go-tools": "npm run get-goimports && npm run get-golint",
     "get-goimports": "go get -u golang.org/x/tools/cmd/goimports",
