Add more checks for backend code

--- a/package.json
+++ b/package.json
@@ -17,11 +17,17 @@
     "format-frontend": "clang-format -i src/app/frontend/**/*.ts build/**/*.js && gulp format-html",
     "format-backend": "goimports -w src/app/backend",
     "check": "npm run lint && npm run test",
-    "lint": "npm run lint-frontend && npm run lint-backend",
+    "lint": "npm run lint-frontend && npm run lint-backend && npm lint-misspell",
     "lint-frontend": "npm run lint-ts && npm run lint-sass",
     "lint-ts": "tslint -c tslint.json --project . -t codeFrame",
     "lint-sass": "./node_modules/sass-lint/bin/sass-lint.js -c .sass-lint.yml 'src/app/frontend/**/*.scss' -v -q",
-    "lint-backend": "golint github.com/kubernetes/dashboard/src/app/backend/...",
+    "lint-misspell": "misspell src/app/*",
+    "lint-backend": "",
+    "lint-gofmt": "gofmt -s -d src/app/backend",
+    "lint-go-vet": "go vet github.com/kubernetes/dashboard/src/app/backend/...",
+    "lint-gocyclo": "",
+    "lint-golint": "golint github.com/kubernetes/dashboard/src/app/backend/...",
+    "lint-ineffassign": "",
     "test": "npm run test-frontend && npm run test-backend",
     "test-frontend": "ng test --browser ChromeHeadless --single-run",
     "test-frontend:watch": "ng test --browser ChromeHeadless",
@@ -32,10 +38,7 @@
     "e2e": "protractor ./build/protractor.conf.js",
     "ci-cluster": "./build/ci-cluster.sh",
     "clean": "rm -rf .go_workspace .tmp coverage dist",
-    "postinstall": "webdriver-manager update && npm run get-go-tools",
-    "get-go-tools": "npm run get-goimports && npm run get-golint",
-    "get-goimports": "go get -u golang.org/x/tools/cmd/goimports",
-    "get-golint": "go get -u github.com/golang/lint/golint"
+    "postinstall": "webdriver-manager update && ./build/get-go-tools.sh"
   },
   "dependencies": {
     "@angular/animations": "^5.1.3",
