Add more checks for backend code

--- a/package.json
+++ b/package.json
@@ -17,16 +17,16 @@
     "format-frontend": "clang-format -i src/app/frontend/**/*.ts build/**/*.js && gulp format-html",
     "format-backend": "goimports -w src/app/backend",
     "check": "npm run lint && npm run test",
-    "lint": "npm run lint-frontend && npm run lint-backend && npm lint-misspell",
+    "lint": "npm run lint-frontend && npm run lint-backend",
     "lint-frontend": "npm run lint-ts && npm run lint-sass",
     "lint-ts": "tslint -c tslint.json --project . -t codeFrame",
     "lint-sass": "./node_modules/sass-lint/bin/sass-lint.js -c .sass-lint.yml 'src/app/frontend/**/*.scss' -v -q",
-    "lint-misspell": "misspell src/app/*",
     "lint-backend": "",
     "lint-gofmt": "gofmt -s -d src/app/backend",
     "lint-go-vet": "go vet github.com/kubernetes/dashboard/src/app/backend/...",
     "lint-gocyclo": "",
     "lint-golint": "golint github.com/kubernetes/dashboard/src/app/backend/...",
+    "lint-misspell": "misspell src/app/*",
     "lint-ineffassign": "",
     "test": "npm run test-frontend && npm run test-backend",
     "test-frontend": "ng test --browser ChromeHeadless --single-run",
