Update prod build

--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   "license": "Apache-2.0",
   "scripts": {
     "start": "concurrently \"npm run start-backend\" \"npm run start-frontend\"",
+    "start:prod": "",
     "start-frontend": "ng serve --aot --proxy-config build/proxy.conf.json",
     "start-backend": "gulp serve --kubeconfig $HOME/.kube/config",
-    "build": "",
-    "build-frontend": "",
-    "build-backend": "",
+    "build": "./build/build.sh",
+    "build:cross": "./build/build.sh -c",
+    "build-frontend": "npm run clean && ng build --aot --prod --outputPath=.tmp/frontend/en",
+    "build-backend": "npm run clean && gulp backend:prod",
+    "build-backend:cross": "gulp backend:prod:cross",
     "format": "concurrently \"npm run format-frontend\" \"npm run format-backend\"",
     "format-frontend": "clang-format -i src/app/frontend/**/*.ts build/**/*.js && gulp format-html",
     "format-backend": "goimports -w src/app/backend",
@@ -90,7 +93,6 @@
     "lite-server": "2.3.0",
     "lodash": "^4.17.4",
     "node-sass": "^4.7.2",
-    "npm-check-updates": "^2.14.0",
     "protractor": "~5.2.2",
     "q": "latest",
     "raw-loader": "^0.5.1",
