--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "start": "concurrently \"npm run start-backend\" \"npm run start-frontend\"",
     "start:prod": "",
     "start-frontend": "ng serve --aot --proxy-config build/proxy.conf.json",
-    "start-backend": "gulp serve --kubeconfig $HOME/.kube/config",
+    "start-backend": "gulp serve --kubeconfig $npm_package_config_kubeconfig",
     "build": "./build/build.sh",
     "build:cross": "./build/build.sh -c",
-    "build-frontend": "npm run clean && ng build --aot --prod --outputPath=.tmp/frontend/en",
+    "build-frontend": "npm run clean && ng build --aot --prod --outputPath=dist/frontend/en",
     "build-backend": "npm run clean && gulp backend:prod",
-    "build-backend:cross": "gulp backend:prod:cross",
+    "build-backend:cross": "npm run clean && gulp backend:prod:cross",
     "format": "concurrently \"npm run format-frontend\" \"npm run format-backend\"",
     "format-frontend": "clang-format -i src/app/frontend/**/*.ts build/**/*.js && gulp format-html",
     "format-backend": "goimports -w src/app/backend",
