Add npm config file

--- a/.npmrc
+++ b/.npmrc
@@ -2,13 +2,45 @@
 # More information can be found at:
 #   https://docs.npmjs.com/files/npmrc
 #   https://docs.npmjs.com/misc/config
+#
+# Config variables can be overridden by running:
+#   npm run <script-name> --kubernetes-dashboard:<variable-name>=<path>
+#   i.e. npm run start --kubernetes-dashboard:kubeconfig=/etc/kubernetes/admin.conf
 
 # Used by:
 #   start
+#   start:prod
 #   start-backend
-#
-# Can be overridden by running 'npm run <script-name> --kubernetes-dashboard:kubeconfig=<path>'
 
 kubernetes-dashboard:kubeconfig = ${HOME}/.kube/config
 
+# Used by:
+#   build-frontend
 
+kubernetes-dashboard:frontend_build_dir = dist/frontend/en
+
+# Used by:
+#   start:prod
+
+kubernetes-dashboard:dashboard_binary_path = dist/amd64/dashboard
+
+# Used by:
+#   start:prod
+
+kubernetes-dashboard:frontend_src_dir = src/app/frontend
+
+# Used by:
+#   format
+#   format-frontend
+#   lint
+#   lint-sass
+
+kubernetes-dashboard:backend_src_dir = src/app/backend
+
+# Used by:
+#   lint
+#   lint-go-vet
+#   lint-go-lint
+#   test-backend
+
+kubernetes-dashboard:go_pkg_path = github.com/kubernetes/dashboard/src/app/backend
