--- a/package.json
+++ b/package.json
@@ -8,33 +8,33 @@
   "license": "Apache-2.0",
   "scripts": {
     "start": "concurrently \"npm run start-backend\" \"npm run start-frontend\"",
-    "start:prod": "",
+    "start:prod": "npm run build && ./$npm_package_config_dashboard_binary_path --kubeconfig $npm_package_config_kubeconfig",
     "start-frontend": "ng serve --aot --proxy-config build/proxy.conf.json",
     "start-backend": "gulp serve --kubeconfig $npm_package_config_kubeconfig",
     "build": "./build/build.sh",
     "build:cross": "./build/build.sh -c",
-    "build-frontend": "npm run clean && ng build --aot --prod --outputPath=dist/frontend/en",
+    "build-frontend": "npm run clean && ng build --aot --prod --outputPath=$npm_package_config_frontend_build_dir",
     "build-backend": "npm run clean && gulp backend:prod",
     "build-backend:cross": "npm run clean && gulp backend:prod:cross",
     "format": "concurrently \"npm run format-frontend\" \"npm run format-backend\"",
-    "format-frontend": "clang-format -i src/app/frontend/**/*.ts build/**/*.js && gulp format-html",
-    "format-backend": "goimports -w src/app/backend",
+    "format-frontend": "clang-format -i $npm_package_config_frontend_src_dir/**/*.ts build/**/*.js && gulp format-html",
+    "format-backend": "goimports -w $npm_package_config_backend_src_dir",
     "check": "npm run lint && npm run test",
     "lint": "npm run lint-frontend && npm run lint-backend",
     "lint-frontend": "npm run lint-ts && npm run lint-sass",
     "lint-ts": "tslint -c tslint.json --project . -t codeFrame",
-    "lint-sass": "./node_modules/sass-lint/bin/sass-lint.js -c .sass-lint.yml 'src/app/frontend/**/*.scss' -v -q",
+    "lint-sass": "./node_modules/sass-lint/bin/sass-lint.js -c .sass-lint.yml '$npm_package_config_frontend_src_dir/**/*.scss' -v -q",
     "lint-backend": "",
-    "lint-gofmt": "gofmt -s -d src/app/backend",
-    "lint-go-vet": "go vet github.com/kubernetes/dashboard/src/app/backend/...",
+    "lint-gofmt": "gofmt -s -d $npm_package_config_backend_src_dir",
+    "lint-go-vet": "go vet $npm_package_config_go_pkg_path/...",
     "lint-gocyclo": "",
-    "lint-golint": "golint github.com/kubernetes/dashboard/src/app/backend/...",
+    "lint-golint": "golint $npm_package_config_go_pkg_path/...",
     "lint-misspell": "misspell src/app/*",
     "lint-ineffassign": "",
     "test": "npm run test-frontend && npm run test-backend",
     "test-frontend": "ng test --browser ChromeHeadless --single-run",
     "test-frontend:watch": "ng test --browser ChromeHeadless",
-    "test-backend": "go test github.com/kubernetes/dashboard/src/app/backend/...",
+    "test-backend": "go test $npm_package_config_go_pkg_path/...",
     "coverage": "concurrently \"npm run coverage-backend\" \"npm run coverage-frontend\"",
     "coverage-frontend": "",
     "coverage-backend": "./build/coverage-backend.sh coverage/go.txt",
