--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-# Local copies of dependencies that should stay on developers' local machines
+# Local copies of dependencies that should stay on developers' local machines.
 node_modules/
 
-# Build and test artifacts
+# Build and test artifacts.
 .go_workspace/
 .sass-cache/
 .tmp/
@@ -9,13 +9,13 @@ node_modules/
 dist/
 coverage/
 
-# System specific files
+# System specific files.
 .DS_Store
 
-# IDE specific files
+# IDE specific files.
 .idea/
 *.iml
 *.swp
 
-# NPM debug log
+# NPM debug log.
 npm-debug.log
