Use karma config file for tests

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "format": "concurrently \"npm run format-frontend\" \"npm run format-backend\"",
     "format-frontend": "clang-format -i $npm_package_config_frontend_src_dir/**/*.ts build/**/*.js && gulp format-html",
     "format-backend": "goimports -w $npm_package_config_backend_src_dir",
-    "check": "npm run lint && npm run test",
+    "check": "npm run lint && npm run test && npm run e2e",
     "lint": "npm run lint-frontend && npm run lint-backend",
     "lint-frontend": "npm run lint-ts && npm run lint-sass",
     "lint-ts": "tslint -c tslint.json --project . -t codeFrame",
@@ -32,8 +32,8 @@
     "lint-misspell": "misspell src/app/*",
     "lint-ineffassign": "",
     "test": "npm run test-frontend && npm run test-backend",
-    "test-frontend": "ng test --browser ChromeHeadless --single-run",
-    "test-frontend:watch": "ng test --browser ChromeHeadless",
+    "test-frontend": "ng test --config build/karma.conf.js --single-run",
+    "test-frontend:watch": "ng test --config build/karma.conf.js",
     "test-backend": "go test $npm_package_config_go_pkg_path/...",
     "coverage": "concurrently \"npm run coverage-backend\" \"npm run coverage-frontend\"",
     "coverage-frontend": "",
@@ -84,12 +84,14 @@
     "gulp-filter": "^5.1.0",
     "gulp-header-license": "^1.0.9",
     "gulp-license-check": "^1.2.1",
+    "gulp-util": "^3.0.8",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "js-beautify": "^1.7.5",
     "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
+    "karma-coverage": "^1.1.1",
     "karma-coverage-istanbul-reporter": "~1.3.3",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "~0.2.2",
