Remove redundant NPM parameters

--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
     "build-backend": "npm run clean && gulp backend:prod",
     "build-backend:cross": "npm run clean && gulp backend:prod:cross",
     "format": "concurrently \"npm run format-frontend\" \"npm run format-backend\"",
-    "format-frontend": "clang-format -i $npm_package_config_frontend_src_dir/**/*.ts build/**/*.js && gulp format-html",
-    "format-backend": "goimports -w $npm_package_config_backend_src_dir",
+    "format-frontend": "clang-format -i src/app/frontend/**/*.ts build/**/*.js && gulp format-html",
+    "format-backend": "goimports -w src/app/backend",
     "check": "npm run lint && npm run test && npm run e2e",
     "lint": "npm run lint-frontend && npm run lint-backend",
     "lint-frontend": "npm run lint-ts && npm run lint-sass",
     "lint-ts": "tslint -c tslint.json --project . -t codeFrame",
-    "lint-sass": "./node_modules/sass-lint/bin/sass-lint.js -c .sass-lint.yml '$npm_package_config_frontend_src_dir/**/*.scss' -v -q",
+    "lint-sass": "./node_modules/sass-lint/bin/sass-lint.js -c .sass-lint.yml 'src/app/frontend/**/*.scss' -v -q",
     "lint-backend": "",
-    "lint-gofmt": "gofmt -s -d $npm_package_config_backend_src_dir",
+    "lint-gofmt": "gofmt -s -d src/app/backend",
     "lint-go-vet": "go vet $npm_package_config_go_pkg_path/...",
     "lint-gocyclo": "",
     "lint-golint": "golint $npm_package_config_go_pkg_path/...",
