Update lint and fix some errors

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "format": "concurrently \"npm run format-frontend\" \"npm run format-backend\"",
     "format-frontend": "clang-format -i src/app/frontend/**/*.ts build/**/*.js && gulp format-html",
     "format-backend": "goimports -w src/app/backend",
-    "check": "npm run lint && npm run test && npm run e2e",
+    "check": "npm run check-licenses && npm run lint && npm run test && npm run e2e",
+    "check-licenses": "gulp check-license-headers",
     "lint": "npm run lint-frontend && npm run lint-backend",
     "lint-frontend": "npm run lint-ts && npm run lint-sass",
     "lint-ts": "tslint -c tslint.json --project . -t codeFrame",
