Add lint for backend

--- a/package.json
+++ b/package.json
@@ -31,15 +31,15 @@
     "lint-sass": "./node_modules/sass-lint/bin/sass-lint.js -c .sass-lint.yml 'src/app/frontend/**/*.scss' -v -q",
     "lint-backend": "",
     "lint-gofmt": "gofmt -s -d src/app/backend",
-    "lint-go-vet": "go vet $npm_package_config_go_pkg_path/...",
+    "lint-go-vet": "go vet github.com/kubernetes/dashboard/src/app/backend/...",
     "lint-gocyclo": "",
-    "lint-golint": "golint $npm_package_config_go_pkg_path/...",
+    "lint-golint": "golint github.com/kubernetes/dashboard/src/app/backend/...",
     "lint-misspell": "misspell src/app/*",
     "lint-ineffassign": "",
     "test": "npm run test-frontend && npm run test-backend",
     "test-frontend": "ng test --config build/karma.conf.js --single-run",
     "test-frontend:watch": "ng test --config build/karma.conf.js",
-    "test-backend": "go test $npm_package_config_go_pkg_path/...",
+    "test-backend": "go test github.com/kubernetes/dashboard/src/app/backend/...",
     "coverage-backend": "./build/coverage-backend.sh coverage/go.txt",
     "e2e": "protractor ./build/protractor.conf.js",
     "clean": "rm -rf .go_workspace .tmp .tools coverage dist",
