Adapt build dir similar to angular repository

--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "scripts": {
     "start": "concurrently \"npm run start-backend\" \"npm run start-frontend\"",
     "start:prod": "npm run build && ./$npm_package_config_dashboard_binary_path --kubeconfig $npm_package_config_kubeconfig",
-    "start-frontend": "ng serve --aot --proxy-config build/proxy.conf.json",
+    "start-frontend": "ng serve --aot --proxy-config aio/proxy.conf.json",
     "start-backend": "gulp serve --kubeconfig $npm_package_config_kubeconfig",
-    "build": "./build/build.sh",
-    "build:cross": "./build/build.sh -c",
+    "build": "./aio/scripts/build.sh",
+    "build:cross": "./aio/scripts/build.sh -c",
     "build:docker:cross" : "npm run build:cross && gulp docker-image:release:cross",
     "build:docker:head": "npm run build && gulp docker-image:head",
     "build:docker:head:cross": "npm run build:cross && gulp docker-image:head:cross",
@@ -21,7 +21,7 @@
     "build-backend:cross": "npm run clean && gulp backend:prod:cross",
     "docker-push:head:cross": "npm run build:docker:head:cross && gulp push-to-docker:head:cross",
     "format": "concurrently \"npm run format-frontend\" \"npm run format-backend\"",
-    "format-frontend": "clang-format -i src/app/frontend/**/*.ts build/**/*.js && gulp format-html",
+    "format-frontend": "clang-format -i src/app/frontend/**/*.ts aio/**/*.js && gulp format-html",
     "format-backend": "goimports -w src/app/backend",
     "check": "npm run check-licenses && npm run lint && npm run test && npm run e2e",
     "check-licenses": "gulp check-license-headers",
@@ -37,13 +37,13 @@
     "lint-misspell": "misspell src/app/*",
     "lint-ineffassign": "",
     "test": "npm run test-frontend && npm run test-backend",
-    "test-frontend": "ng test --config build/karma.conf.js --single-run",
-    "test-frontend:watch": "ng test --config build/karma.conf.js",
+    "test-frontend": "ng test --config aio/karma.conf.js --single-run",
+    "test-frontend:watch": "ng test --config aio/karma.conf.js",
     "test-backend": "go test $npm_package_config_go_pkg_path/...",
-    "coverage-backend": "./build/coverage-backend.sh coverage/go.txt",
-    "e2e": "protractor ./build/protractor.conf.js",
+    "coverage-backend": "./aio/scripts/coverage-backend.sh coverage/go.txt",
+    "e2e": "protractor ./aio/protractor.conf.js",
     "clean": "rm -rf .go_workspace .tmp .tools coverage dist",
-    "postinstall": "webdriver-manager update && ./build/get-go-tools.sh"
+    "postinstall": "webdriver-manager update && ./aio/scripts/get-go-tools.sh"
   },
   "dependencies": {
     "@angular/animations": "^5.1.3",
