Move tsconfig files out of src dir

--- a/aio/tsconfig.e2e.json
+++ b/aio/tsconfig.e2e.json
@@ -2,7 +2,7 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/e2e",
-    "baseUrl": "./",
+    "baseUrl": "../src/app/frontend",
     "module": "commonjs",
     "target": "es5",
     "types": [
@@ -10,5 +10,6 @@
       "jasminewd2",
       "node"
     ]
-  }
+  },
+  "include": ["../src/test/e2e/**/*"]
 }
