Add code/styles formatting and checks

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start-backend": "gulp serve --kubeconfig $npm_package_config_kubeconfig",
     "build": "./aio/scripts/build.sh",
     "build:cross": "./aio/scripts/build.sh -c",
-    "build:docker:cross" : "npm run build:cross && gulp docker-image:release:cross",
+    "build:docker:cross": "npm run build:cross && gulp docker-image:release:cross",
     "build:docker:head": "npm run build && gulp docker-image:head",
     "build:docker:head:cross": "npm run build:cross && gulp docker-image:head:cross",
     "build-frontend": "npm run clean && ng build --aot --prod --outputPath=$npm_package_config_frontend_build_dir",
@@ -21,9 +21,16 @@
     "build-backend:cross": "npm run clean && gulp backend:prod:cross",
     "docker-push:head:cross": "npm run build:docker:head:cross && gulp push-to-docker:head:cross",
     "format": "concurrently \"npm run format-frontend\" \"npm run format-backend\"",
-    "format-frontend": "clang-format -i src/app/frontend/**/*.ts aio/**/*.js && gulp format-html",
+    "format:check": "npm run format-code:check && npm run format-styles:check",
+    "format-frontend": "npm run format-code && npm run format-html && npm run format-styles",
+    "format-code": "./aio/scripts/format.sh --code",
+    "format-code:check": "./aio/scripts/format.sh --code --check",
+    "format-html": "gulp format-html",
+    "format-html:check": "",
+    "format-styles": "./aio/scripts/format.sh --styles",
+    "format-styles:check": "./aio/scripts/format.sh --styles --check",
     "format-backend": "goimports -w src/app/backend",
-    "check": "npm run check-licenses && npm run lint && npm run test && npm run e2e",
+    "check": "npm run check-licenses && npm run format:check && npm run lint && npm run test && npm run e2e",
     "check-licenses": "gulp check-license-headers",
     "lint": "npm run lint-frontend && npm run lint-backend",
     "lint-frontend": "npm run lint-ts && npm run lint-sass",
@@ -35,7 +42,7 @@
     "test-frontend:watch": "ng test --config aio/karma.conf.js",
     "test-backend": "go test github.com/kubernetes/dashboard/src/app/backend/...",
     "coverage-backend": "./aio/scripts/coverage-backend.sh coverage/go.txt",
-    "e2e": "protractor ./aio/protractor.conf.js",
+    "e2e": "ng e2e",
     "clean": "rm -rf .go_workspace .tmp .tools coverage dist npm-debug.log",
     "postinstall": "webdriver-manager update"
   },
@@ -98,6 +105,7 @@
     "raw-loader": "^0.5.1",
     "sass-lint": "^1.12.1",
     "sass-loader": "^6.0.6",
+    "scssfmt": "^1.0.4",
     "semver": "^5.4.1",
     "source-map-explorer": "~1.5.0",
     "through2": "^2.0.3",
