Add html formatter and check script

--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "build-backend:cross": "npm run clean && gulp backend:prod:cross",
     "docker-push:head:cross": "npm run build:docker:head:cross && gulp push-to-docker:head:cross",
     "format": "concurrently \"npm run format-frontend\" \"npm run format-backend\"",
-    "format:check": "npm run format-code:check && npm run format-styles:check",
+    "format:check": "npm run format-code:check && npm run format-styles:check && npm run format-html:check",
     "format-frontend": "npm run format-code && npm run format-html && npm run format-styles",
     "format-code": "./aio/scripts/format.sh --code",
     "format-code:check": "./aio/scripts/format.sh --code --check",
-    "format-html": "gulp format-html",
-    "format-html:check": "",
+    "format-html": "./aio/scripts/format.sh --html",
+    "format-html:check": "./aio/scripts/format.sh --html --check",
     "format-styles": "./aio/scripts/format.sh --styles",
     "format-styles:check": "./aio/scripts/format.sh --styles --check",
     "format-backend": "goimports -w src/app/backend",
@@ -82,6 +82,7 @@
     "codelyzer": "~4.0.2",
     "concurrently": "~3.5.1",
     "del": "^3.0.0",
+    "glob-run": "^0.1.6",
     "google-closure-compiler": "^20180101.0.0",
     "gulp": "^3.9.1",
     "gulp-filter": "^5.1.0",
@@ -90,7 +91,6 @@
     "gulp-util": "^3.0.8",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "js-beautify": "^1.7.5",
     "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
