--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "format-styles:check": "./aio/scripts/format.sh --styles --check",
     "format-backend": "goimports -w src/app/backend",
     "check": "npm run check-licenses && npm run format:check && npm run lint && npm run test && npm run e2e",
+    "check:code-quality": "npm run check-licenses && npm run format:check && npm run lint && npm run test-with-coverage",
     "check-licenses": "gulp check-license-headers",
     "lint": "npm run lint-frontend && npm run lint-backend",
     "lint-frontend": "npm run lint-ts && npm run lint-sass",
@@ -39,6 +40,7 @@
     "lint-sass": "./node_modules/sass-lint/bin/sass-lint.js -c .sass-lint.yml 'src/app/frontend/**/*.scss' -v -q",
     "lint-backend": "./aio/scripts/lint-backend.sh",
     "test": "npm run test-frontend && npm run test-backend",
+    "test-with-coverage": "npm run test-frontend && npm run coverage-backend",
     "test-frontend": "ng test --config aio/karma.conf.js --single-run",
     "test-frontend:watch": "ng test --config aio/karma.conf.js",
     "test-backend": "go test github.com/kubernetes/dashboard/src/app/backend/...",
@@ -91,6 +93,7 @@
     "gulp-util": "^3.0.8",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
+    "js-beautify": "^1.7.5",
     "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
